Install docs, version 0. Created from GDocs. Closes JIRA NFMS-12.